--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_map: ^8.0.0
   cached_network_image: ^3.3.0
   flutter_launcher_icons: "^0.13.1"
+  carousel_slider_plus: 7.1.0
 
 flutter_icons:
   android: true
@@ -87,6 +88,7 @@ flutter:
   assets:
     - assets/
     - assets/icons/
+    - assets/images/
     - assets/logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
