--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_launcher_icons: "^0.13.1"
   carousel_slider_plus: 7.1.0
   mask_text_input_formatter: ^2.9.0
+  file_picker: ^10.1.2
 
 flutter_icons:
   android: true
