--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,21 +33,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   equatable: ^2.0.7
   intl: ^0.20.2
-  flutter_svg: ^2.0.17
   dartz: ^0.10.1
   http: ^1.3.0
   dio: ^5.8.0+1
-  connectivity_plus: ^6.1.3
   hydrated_bloc: ^10.0.0
   path_provider: ^2.1.5
   shared_preferences: ^2.5.2
   flutter_screenutil: ^5.9.3
-  qr_code_scanner_plus: ^2.0.10+1
   flutter_keyboard_visibility: ^6.0.0
   flutter_staggered_grid_view: ^0.6.2
   latlong2: ^0.9.0
@@ -66,6 +62,7 @@ flutter_icons:
   adaptive_icon_background: "assets/icons/android/icon_background.png"
 
 dev_dependencies:
+  dependency_validator: ^4.0.0
   flutter_test:
     sdk: flutter
 
