--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   carousel_slider_plus: 7.1.0
   mask_text_input_formatter: ^2.9.0
   file_picker: ^10.1.2
+  image_picker: ^1.0.4
 
 flutter_icons:
   android: true
