--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   file_picker: ^10.1.2
   image_picker: ^1.0.4
+  geolocator: ^14.0.1
 
 flutter_icons:
   android: true
