--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   file_picker: ^10.1.2
   image_picker: ^1.0.4
   geolocator: ^14.0.1
+  flutter_widget_from_html: ^0.16.0
 
 flutter_icons:
   android: true
