--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+4
+version: 1.0.0+1
 
 environment:
   sdk: ^3.7.2
@@ -56,6 +56,10 @@ dependencies:
   image_picker: ^1.0.4
   geolocator: ^14.0.1
   flutter_widget_from_html: ^0.16.0
+  package_info_plus: ^8.3.0
+  permission_handler: ^12.0.1
+  open_file: ^3.5.10
+  device_info_plus: ^11.5.0
 
 flutter_icons:
   android: true
